tests/ui/internal/internal-unstable.stderr
error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:40:25
   |
LL |     pass_through_allow!(internal_unstable::unstable());
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:42:27
   |
LL |     pass_through_noallow!(internal_unstable::unstable());
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:46:22
   |
LL |     println!("{:?}", internal_unstable::unstable());
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:48:10
   |
LL |     bar!(internal_unstable::unstable());
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:18:9
   |
LL |         internal_unstable::unstable();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bar!(internal_unstable::unstable());
   |     ----------------------------------- in this macro invocation
   |
   = help: add `#![feature(function)]` to the crate attributes to enable
   = note: this error originates in the macro `foo` which comes from the expansion of the macro `bar` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
